[gd_scene load_steps=17 format=2]

[ext_resource path="res://MenuBG.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/bg0.png" type="Texture" id=2]
[ext_resource path="res://Logo.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/body_bold.tres" type="DynamicFont" id=4]
[ext_resource path="res://images/salty_trivia_new_logo.png" type="Texture" id=5]
[ext_resource path="res://ThemeOption.theme" type="Theme" id=6]
[ext_resource path="res://Title.gd" type="Script" id=7]
[ext_resource path="res://audio/music/main_theme.ogg" type="AudioStream" id=8]
[ext_resource path="res://KeyBox.stylebox" type="StyleBox" id=9]
[ext_resource path="res://ThemeEpisode.tres" type="Theme" id=10]
[ext_resource path="res://images/controls.png" type="Texture" id=11]
[ext_resource path="res://ScreenStretch.gd" type="Script" id=12]
[ext_resource path="res://ThemeSmallerText.tres" type="Theme" id=13]
[ext_resource path="res://CheatIndicator.tscn" type="PackedScene" id=14]
[ext_resource path="res://essential/default_font_b.tres" type="DynamicFont" id=15]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 16.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0

[node name="Title" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 360 )
color = Color( 0, 0, 0, 1 )
script = ExtResource( 7 )

[node name="ScreenStretch" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
rect_clip_content = true
script = ExtResource( 12 )

[node name="ColorRect" parent="ScreenStretch" instance=ExtResource( 1 )]
margin_left = -16.0
margin_right = 16.0
texture = ExtResource( 2 )
expand = true

[node name="Logo" parent="ScreenStretch" instance=ExtResource( 3 )]
position = Vector2( 1014, 137 )
scale = Vector2( 0.25, 0.25 )

[node name="Label" type="Label" parent="ScreenStretch"]
margin_left = 784.0
margin_top = 248.0
margin_right = 1240.0
margin_bottom = 299.0
custom_fonts/font = ExtResource( 4 )
text = "Episode Pack Vol. 1"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ScreenStretch"]
stream = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenStretch"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -496.0
margin_top = -393.0
margin_right = -40.0
margin_bottom = -37.0
alignment = 2

[node name="Button" type="Button" parent="ScreenStretch/VBoxContainer"]
margin_right = 456.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( -1168, 328 )
theme = ExtResource( 10 )
text = "Играть"

[node name="Button2" type="Button" parent="ScreenStretch/VBoxContainer"]
margin_top = 72.0
margin_right = 456.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( -1168, 328 )
theme = ExtResource( 10 )
text = "About"

[node name="Button3" type="Button" parent="ScreenStretch/VBoxContainer"]
margin_top = 144.0
margin_right = 456.0
margin_bottom = 212.0
rect_pivot_offset = Vector2( -1168, 328 )
theme = ExtResource( 10 )
text = "Настройки"

[node name="Button4" type="Button" parent="ScreenStretch/VBoxContainer"]
margin_top = 216.0
margin_right = 456.0
margin_bottom = 284.0
rect_pivot_offset = Vector2( -1168, 328 )
theme = ExtResource( 10 )
text = "Сохранения"

[node name="Button5" type="Button" parent="ScreenStretch/VBoxContainer"]
margin_top = 288.0
margin_right = 456.0
margin_bottom = 356.0
rect_pivot_offset = Vector2( -1168, 328 )
theme = ExtResource( 10 )
text = "Покинуть"

[node name="Panel" type="Panel" parent="ScreenStretch"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1238.0
margin_top = -129.0
margin_right = -520.0
margin_bottom = -40.0
theme = ExtResource( 10 )

[node name="RichTextLabel" type="RichTextLabel" parent="ScreenStretch/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
bbcode_enabled = true

[node name="CheatIndicator" parent="ScreenStretch" instance=ExtResource( 14 )]

[node name="Label" parent="ScreenStretch/CheatIndicator" index="0"]
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="About" type="ColorRect" parent="ScreenStretch"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.752941 )

[node name="PanelContainer" type="PanelContainer" parent="ScreenStretch/About"]
margin_left = 160.0
margin_top = 40.0
margin_right = 1120.0
margin_bottom = 680.0
rect_min_size = Vector2( 960, 640 )
custom_styles/panel = ExtResource( 9 )

[node name="ScrollContainer" type="ScrollContainer" parent="ScreenStretch/About/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 952.0
margin_bottom = 624.0
theme = ExtResource( 10 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenStretch/About/PanelContainer/ScrollContainer"]
margin_right = 944.0
margin_bottom = 708.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 13 )

[node name="Panel" type="TextureRect" parent="ScreenStretch/About/PanelContainer/ScrollContainer/VBoxContainer"]
margin_right = 912.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 256 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Control" type="PanelContainer" parent="ScreenStretch/About/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 260.0
margin_right = 912.0
margin_bottom = 650.0
custom_styles/panel = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="ScreenStretch/About/PanelContainer/ScrollContainer/VBoxContainer/Control"]
margin_left = 16.0
margin_right = 912.0
margin_bottom = 390.0
bbcode_enabled = true
bbcode_text = "[b]Salty Trivia with Candy Barre[/b] is a sassy trivia video game where the questions are ridiculous, but the answers are serious.
Salty Trivia with Candy Barre is a fangame of [i]You Don’t Know Jack,[/i] the original irreverent trivia game by [url=\"https://www.jackboxgames.com\"]Jackbox Games[/url]. This game has no relation with [i]You Don’t Know Jack[/i] in any official capacity.

[b]Premise[/b]
You are remote participants of a game show! Answer right to win money, but flub it up and lose potential winnings.
You each have one [i]Lifesaver[/i] per 12 questions, which can be used to eliminate a choice from a multiple-choice question. Gain an advantage over your competitors with it.

[b]Controls[/b]"
text = "Salty Trivia with Candy Barre is a sassy trivia video game where the questions are ridiculous, but the answers are serious.
Salty Trivia with Candy Barre is a fangame of You Don’t Know Jack, the original irreverent trivia game by Jackbox Games. This game has no relation with You Don’t Know Jack in any official capacity.

Premise
You are remote participants of a game show! Answer right to win money, but flub it up and lose potential winnings.
You each have one Lifesaver per 12 questions, which can be used to eliminate a choice from a multiple-choice question. Gain an advantage over your competitors with it.

Controls"
fit_content_height = true

[node name="Panel2" type="TextureRect" parent="ScreenStretch/About/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 654.0
margin_right = 912.0
margin_bottom = 1074.0
rect_min_size = Vector2( 0, 420 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Control2" type="PanelContainer" parent="ScreenStretch/About/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 1078.0
margin_right = 912.0
margin_bottom = 1828.0
custom_styles/panel = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="ScreenStretch/About/PanelContainer/ScrollContainer/VBoxContainer/Control2"]
margin_left = 16.0
margin_right = 912.0
margin_bottom = 750.0
bbcode_enabled = true
bbcode_text = "Each player has control of 7 buttons or keys.

[b]Gamepad:[/b] 2 players can play per gamepad. Each player has control of one joystick and four face buttons or a D-pad.
There are 3 different input methods:
• [b]Grid:[/b] Move the cursor with the joystick, and push the focused key with the right face button. Included for legacy purposes.
• [b]DaisyWheel:[/b] Select one of nine directions with the joystick, and press one of four face buttons to type a letter. Most efficient, but takes a bit of time to get used to.
• [b]Spiral:[/b] Seek through the letters with the joystick, and press any face button to type the selected letter. Less efficient than DaisyWheel, but easier to learn.

[b]Keyboard:[/b] 4 players can play on one keyboard. Assuming QWERTY, the keybinds are as follows:
• [b]Player 1:[/b] QWE ASD
• [b]Player 2:[/b] FGH VBN
• [b]Player 3:[/b] UIO JKL
• [b]Player 4:[/b] 789 456 (on numeric keypad)
For most questions, you will be using the top middle, bottom left, bottom right, and bottom middle buttons as the four face buttons, and the top left and top right buttons will act as the L and R buttons.

[b]Phone:[/b] Additional players can connect via a Web browser on a smartphone, tablet, or PC. Go to hai!touch Gate ([url]https://haitouch.ga/te[/url]), and type in the room code to join a room.

© 2022−2023 hai!touch Studios"
text = "Each player has control of 7 buttons or keys.

Gamepad: 2 players can play per gamepad. Each player has control of one joystick and four face buttons or a D-pad.
There are 3 different input methods:
• Grid: Move the cursor with the joystick, and push the focused key with the right face button. Included for legacy purposes.
• DaisyWheel: Select one of nine directions with the joystick, and press one of four face buttons to type a letter. Most efficient, but takes a bit of time to get used to.
• Spiral: Seek through the letters with the joystick, and press any face button to type the selected letter. Less efficient than DaisyWheel, but easier to learn.

Keyboard: 4 players can play on one keyboard. Assuming QWERTY, the keybinds are as follows:
• Player 1: QWE ASD
• Player 2: FGH VBN
• Player 3: UIO JKL
• Player 4: 789 456 (on numeric keypad)
For most questions, you will be using the top middle, bottom left, bottom right, and bottom middle buttons as the four face buttons, and the top left and top right buttons will act as the L and R buttons.

Phone: Additional players can connect via a Web browser on a smartphone, tablet, or PC. Go to hai!touch Gate (https://haitouch.ga/te), and type in the room code to join a room.

© 2022−2023 hai!touch Studios"
fit_content_height = true

[node name="EndMargin" type="Control" parent="ScreenStretch/About/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 1832.0
margin_right = 912.0
margin_bottom = 1848.0
rect_min_size = Vector2( 0, 16 )

[node name="Close" type="Button" parent="ScreenStretch/About"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -510.0
margin_top = -350.0
margin_right = -446.0
margin_bottom = -286.0
rect_min_size = Vector2( 64, 64 )
theme = ExtResource( 6 )
text = "×"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionCode" type="Label" parent="ScreenStretch"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 15 )
align = 1
valign = 1

[connection signal="mouse_entered" from="ScreenStretch/VBoxContainer/Button" to="." method="_on_Button_mouse_entered" binds= [ 0 ]]
[connection signal="pressed" from="ScreenStretch/VBoxContainer/Button" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="ScreenStretch/VBoxContainer/Button2" to="." method="_on_Button_mouse_entered" binds= [ 1 ]]
[connection signal="pressed" from="ScreenStretch/VBoxContainer/Button2" to="." method="_on_About_pressed"]
[connection signal="mouse_entered" from="ScreenStretch/VBoxContainer/Button3" to="." method="_on_Button_mouse_entered" binds= [ 2 ]]
[connection signal="pressed" from="ScreenStretch/VBoxContainer/Button3" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="ScreenStretch/VBoxContainer/Button4" to="." method="_on_Button_mouse_entered" binds= [ 3 ]]
[connection signal="pressed" from="ScreenStretch/VBoxContainer/Button4" to="." method="_on_Save_Data_pressed"]
[connection signal="mouse_entered" from="ScreenStretch/VBoxContainer/Button5" to="." method="_on_Button_mouse_entered" binds= [ 4 ]]
[connection signal="pressed" from="ScreenStretch/VBoxContainer/Button5" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="ScreenStretch/About/Close" to="." method="_on_Close_pressed"]

[editable path="ScreenStretch/CheatIndicator"]
